Fixed display on mobile devices; edited  content a bit

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -46,9 +46,7 @@ figcaption {
 }
 
 .right-box {
-    position: absolute;
-    right: 100px;
-    top: 80px;
+    top: 20px;
     border: 1px solid;
 }
 
